--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
+    "seed-test": "NODE_ENV=test knex seed:run",
     "test": "jest",
-     "migrate-make": "knex migrate:make",
+    "migrate-make": "knex migrate:make",
     "migrate-latest": "knex migrate:latest",
     "migrate-rollback": "knex migrate:rollback",
     "dev": "nodemon listen.js"
